Half way commit

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= link_to "Wines", "/wines" %> <%= link_to "Wineries", "/wineries" %>
     <%= yield %>
   </body>
 </html>
