--- a/app/views/wines/index.html.erb
+++ b/app/views/wines/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Wines</h1>
 
-<% @wines.each do |wine| %>
+<% @wines.where(still_available: true).each do |wine| %>
 <p><h3><%= wine.name %></h3></p>
+<%= link_to "Edit Info For #{wine.name}", "/wines/#{wine.id}/edit" %>
 <p>ABV: <%= wine.abv %></p>
 <p>Still Available: <%= wine.still_available %></p>
 <% end %>
